# ci-exercice-yz5694

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: api.rst  changelog.md  conf.py  index.md  installing.md
source/: conf.py  index.rst
src/unc/: __init__.py
tests/: test_labunc.py  test_stdunc.py
